Bug 236792 - No identity set error message
Summary: No identity set error message
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-08 00:38 UTC by Sabine Faure
Modified: 2010-05-13 02:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-08 00:38:02 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kmail
- Click on 'New' button
- Go to Settings menu/Configure Kmail...
- Click on 'Identities' icon and configure an identity
- In the 'Composer' dialogue, go to View menu/Identity
- An 'Identity:' combo box appears above the 'to' line edit and displays the ID name
- Fill in the email's recipient address, the subject and enter a few words
- Click on 'Send' button
- A 'Sorry' pop up dialogue appears with the following message: 'You must enter your email address in the From: field. You should also set your email address for all identities, so that you do not have to enter it for each message.'

This should not happen since you already have configured and set an identity.

Trunk, Svn Rev 1124075
Comment 1 Leo Franchi 2010-05-12 23:31:09 UTC
SVN commit 1125999 by lfranchi:

If a folder has an empty identity, don't override the default one.

BUG: 236792


 M  +1 -1      foldercollection.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125999
Comment 2 Sabine Faure 2010-05-13 02:04:24 UTC
It is corrected now.

Sending emails with an identity set works.

Trunk, Svn Rev 1125914