If a folder has an empty identity, don't override the default one.

BUG: 236792

svn path=/trunk/KDE/kdepim/kmail/; revision=1125999